<resources>
    <string name="app_name">CalculatorConstraint</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="price_2_34">Price : 2.34</string>
    <string name="_20_0">$20: 0</string>
    <string name="_10_0">$10: 0</string>
    <string name="_5_0">$5: 0</string>
    <string name="_1_0">$1: 0</string>
    <string name="_25">25@</string>
    <string name="_10">10@</string>
    <string name="five_at">5@</string>
    <string name="one_at">1@</string>
    <string name="clear">CLEAR</string>
</resources>